# ham-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
include/: HamGameEngine.hpp  PCH.hpp
include/Core/: Assert.hpp  Base.hpp  Core.hpp  Log.hpp  TypeDefs.hpp
include/Layers/: EditorLayer.hpp  ImGuiLayer.hpp  RenderLayer.hpp  RenderLayer2.hpp
include/Managers/: AssetLoader.hpp  AssetManager.hpp  LayerManager.hpp
include/Render/: Shader.hpp
include/Scene/: Components.hpp  Entity.hpp  Layer.hpp  Scene.hpp  Systems.hpp
include/Utils/: DebugDraw.hpp  EditorCameraController.hpp  GUI.hpp  Gizmos.hpp  Input.hpp  Settings.hpp  Time.hpp
modules/: FindImGui.cmake  FindMagnumIntegration.cmake
src/: HamGameEngine.cpp
src/Layers/: EditorLayer.cpp  ImGuiLayer.cpp  RenderLayer.cpp  RenderLayer2.cpp
src/Managers/: LayerManager.cpp
